phalcom-ast/tests/snapshots/parser__error_unexpected_token.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let = )\")"
---
Err: SyntaxError { kind: UnrecognizedToken { token: "=", expected: ["identifier"] }, range: 4..5 }
