phalcom-ast/tests/snapshots/parser__for_loop_over_list.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"for (x in xs) { System.print(x) }\")"
---
Program {
    statements: [
        For(
            ForStatement {
                binding: "x",
                iter: Var {
                    value: "xs",
                    range: CopyRange {
                        start: 10,
                        end: 12,
                    },
                },
                body: [
                    Expr {
                        expr: MethodCall(
                            MethodCallExpr {
                                object: Var {
                                    value: "System",
                                    range: CopyRange {
                                        start: 16,
                                        end: 22,
                                    },
                                },
                                method: "print",
                                args: [
                                    Argument {
                                        label: None,
                                        expr: Var {
                                            value: "x",
                                            range: CopyRange {
                                                start: 29,
                                                end: 30,
                                            },
                                        },
                                        range: CopyRange {
                                            start: 29,
                                            end: 30,
                                        },
                                    },
                                ],
                                range: CopyRange {
                                    start: 16,
                                    end: 31,
                                },
                            },
                        ),
                        range: CopyRange {
                            start: 16,
                            end: 31,
                        },
                    },
                ],
                range: CopyRange {
                    start: 0,
                    end: 33,
                },
            },
        ),
    ],
}
