phalcom-ast/tests/snapshots/parser__let_binding.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let x = 1 + 2\")"
---
Program {
    statements: [
        Let(
            LetBinding {
                name: "x",
                value: Some(
                    Binary(
                        BinaryExpr {
                            op: Add,
                            left: Number {
                                value: 1.0,
                                range: CopyRange {
                                    start: 8,
                                    end: 9,
                                },
                            },
                            right: Number {
                                value: 2.0,
                                range: CopyRange {
                                    start: 12,
                                    end: 13,
                                },
                            },
                            range: CopyRange {
                                start: 8,
                                end: 13,
                            },
                        },
                    ),
                ),
                range: CopyRange {
                    start: 0,
                    end: 13,
                },
            },
        ),
    ],
}
