phalcom-ast/tests/snapshots/parser__multiline_method_block_parses.snap
---
source: phalcom-ast/tests/parser.rs
expression: parse(&src)
---
Program {
    statements: [
        Class(
            ClassDef {
                name: "Foo",
                members: [
                    Method(
                        MethodDef {
                            name: "method1",
                            params: [],
                            body: [
                                Expr {
                                    expr: String {
                                        value: "foo",
                                        range: CopyRange {
                                            start: 79,
                                            end: 84,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 79,
                                        end: 84,
                                    },
                                },
                            ],
                            is_static: false,
                            range: CopyRange {
                                start: 67,
                                end: 88,
                            },
                        },
                    ),
                    Method(
                        MethodDef {
                            name: "method2",
                            params: [],
                            body: [
                                Expr {
                                    expr: String {
                                        value: "foo",
                                        range: CopyRange {
                                            start: 108,
                                            end: 113,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 108,
                                        end: 113,
                                    },
                                },
                            ],
                            is_static: false,
                            range: CopyRange {
                                start: 92,
                                end: 117,
                            },
                        },
                    ),
                    Method(
                        MethodDef {
                            name: "method3",
                            params: [],
                            body: [
                                Return(
                                    ReturnStatement {
                                        value: Some(
                                            String {
                                                value: "foo",
                                                range: CopyRange {
                                                    start: 144,
                                                    end: 149,
                                                },
                                            },
                                        ),
                                        range: CopyRange {
                                            start: 137,
                                            end: 149,
                                        },
                                    },
                                ),
                            ],
                            is_static: false,
                            range: CopyRange {
                                start: 121,
                                end: 153,
                            },
                        },
                    ),
                    Method(
                        MethodDef {
                            name: "method4",
                            params: [],
                            body: [
                                Expr {
                                    expr: String {
                                        value: "foo",
                                        range: CopyRange {
                                            start: 169,
                                            end: 174,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 169,
                                        end: 174,
                                    },
                                },
                            ],
                            is_static: false,
                            range: CopyRange {
                                start: 157,
                                end: 179,
                            },
                        },
                    ),
                    Method(
                        MethodDef {
                            name: "method5",
                            params: [],
                            body: [
                                Expr {
                                    expr: Var {
                                        value: "one",
                                        range: CopyRange {
                                            start: 199,
                                            end: 202,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 199,
                                        end: 202,
                                    },
                                },
                                Expr {
                                    expr: Var {
                                        value: "two",
                                        range: CopyRange {
                                            start: 204,
                                            end: 207,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 204,
                                        end: 207,
                                    },
                                },
                                Expr {
                                    expr: Var {
                                        value: "three",
                                        range: CopyRange {
                                            start: 213,
                                            end: 218,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 213,
                                        end: 218,
                                    },
                                },
                                Expr {
                                    expr: Var {
                                        value: "four",
                                        range: CopyRange {
                                            start: 220,
                                            end: 224,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 220,
                                        end: 224,
                                    },
                                },
                                Expr {
                                    expr: String {
                                        value: "foo",
                                        range: CopyRange {
                                            start: 229,
                                            end: 234,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 229,
                                        end: 234,
                                    },
                                },
                            ],
                            is_static: false,
                            range: CopyRange {
                                start: 183,
                                end: 239,
                            },
                        },
                    ),
                    Getter(
                        GetterDef {
                            name: "foo",
                            body: [
                                Expr {
                                    expr: String {
                                        value: "foo",
                                        range: CopyRange {
                                            start: 250,
                                            end: 255,
                                        },
                                    },
                                    range: CopyRange {
                                        start: 250,
                                        end: 255,
                                    },
                                },
                            ],
                            is_static: false,
                            range: CopyRange {
                                start: 243,
                                end: 256,
                            },
                        },
                    ),
                ],
                range: CopyRange {
                    start: 0,
                    end: 257,
                },
            },
        ),
    ],
}
