phalcom-ast/tests/snapshots/parser__multiple_statements.snap
---
source: phalcom-ast/tests/parser.rs
expression: "parse(\"let x = 1\\nlet y = 2\")"
---
Program {
    statements: [
        Let(
            LetBinding {
                kind: Let,
                pattern: Name {
                    name: "x",
                    range: CopyRange {
                        start: 4,
                        end: 5,
                    },
                },
                value: Some(
                    Number {
                        value: 1.0,
                        range: CopyRange {
                            start: 8,
                            end: 9,
                        },
                    },
                ),
                range: CopyRange {
                    start: 0,
                    end: 9,
                },
            },
        ),
        Let(
            LetBinding {
                kind: Let,
                pattern: Name {
                    name: "y",
                    range: CopyRange {
                        start: 14,
                        end: 15,
                    },
                },
                value: Some(
                    Number {
                        value: 2.0,
                        range: CopyRange {
                            start: 18,
                            end: 19,
                        },
                    },
                ),
                range: CopyRange {
                    start: 10,
                    end: 19,
                },
            },
        ),
    ],
}
