phalcom-ast/tests/snapshots/parser__postfix_call_preserves_unqualified_call.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 260
expression: "parse(\"f(1, 2)\")"
---
Program {
    statements: [
        Expr {
            expr: UnqualifiedCall(
                UnqualifiedCallExpr {
                    name: "f",
                    args: [
                        Positional {
                            expr: Int {
                                digits: "1",
                                radix: 10,
                                range: CopyRange {
                                    start: 2,
                                    end: 3,
                                },
                            },
                            range: CopyRange {
                                start: 2,
                                end: 3,
                            },
                        },
                        Positional {
                            expr: Int {
                                digits: "2",
                                radix: 10,
                                range: CopyRange {
                                    start: 5,
                                    end: 6,
                                },
                            },
                            range: CopyRange {
                                start: 5,
                                end: 6,
                            },
                        },
                    ],
                    range: CopyRange {
                        start: 0,
                        end: 7,
                    },
                },
            ),
            range: CopyRange {
                start: 0,
                end: 7,
            },
        },
    ],
}
