phalcom-ast/tests/snapshots/parser__requires_attribute_attaches_to_following_method.snap
---
source: phalcom-ast/tests/parser.rs
assertion_line: 290
expression: "parse(\"class Point {\\n  @requires(x > 0)\\n  set(x) {\\n    self.x = x\\n  }\\n}\\n\")"
---
Program {
    statements: [
        Class(
            ClassDef {
                name: "Point",
                superclass: None,
                members: [
                    Method(
                        MethodDef {
                            name: "set",
                            params: [
                                ParameterDef {
                                    name: "x",
                                    label: None,
                                    is_rest: false,
                                    range: CopyRange {
                                        start: 39,
                                        end: 40,
                                    },
                                },
                            ],
                            body: [
                                Expr {
                                    expr: SetProperty(
                                        SetPropertyExpr {
                                            object: SelfVar {
                                                range: CopyRange {
                                                    start: 48,
                                                    end: 52,
                                                },
                                            },
                                            property: "x",
                                            value: Var {
                                                value: "x",
                                                range: CopyRange {
                                                    start: 57,
                                                    end: 58,
                                                },
                                            },
                                            range: CopyRange {
                                                start: 48,
                                                end: 58,
                                            },
                                        },
                                    ),
                                    range: CopyRange {
                                        start: 48,
                                        end: 58,
                                    },
                                },
                            ],
                            is_static: false,
                            is_constructor: false,
                            attributes: [
                                Attribute {
                                    kind: Builtin(
                                        Requires,
                                    ),
                                    name: "requires",
                                    args: [
                                        Binary(
                                            BinaryExpr {
                                                op: GreaterThan,
                                                left: Var {
                                                    value: "x",
                                                    range: CopyRange {
                                                        start: 26,
                                                        end: 27,
                                                    },
                                                },
                                                right: Number {
                                                    value: 0.0,
                                                    range: CopyRange {
                                                        start: 30,
                                                        end: 31,
                                                    },
                                                },
                                                range: CopyRange {
                                                    start: 26,
                                                    end: 31,
                                                },
                                            },
                                        ),
                                    ],
                                    range: CopyRange {
                                        start: 16,
                                        end: 32,
                                    },
                                },
                            ],
                            range: CopyRange {
                                start: 35,
                                end: 62,
                            },
                            name_range: CopyRange {
                                start: 35,
                                end: 38,
                            },
                        },
                    ),
                ],
                attributes: [],
                invariants: [],
                range: CopyRange {
                    start: 0,
                    end: 64,
                },
                name_range: CopyRange {
                    start: 6,
                    end: 11,
                },
            },
        ),
    ],
}
